// Copyright Â© 2022 AMIS Technologies
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package getamis.alice.crypto.tss.eddsa.frost.signer;

option go_package = "github.com/getamis/alice/crypto/tss/eddsa/frost/signer";

import "github.com/getamis/alice/crypto/ecpointgrouplaw/point.proto";

enum Type {
    Round1 = 0;
    Round2 = 1;
}

message Message {
    Type type = 1;
    string id = 2;
    oneof body {
        BodyRound1 round1 = 4;
        BodyRound2 round2 = 5;
    }
}

message BodyRound1 {
	ecpointgrouplaw.EcPointMessage D = 1;
	ecpointgrouplaw.EcPointMessage E = 2;
}

message BodyRound2 {
	bytes zi = 1;
}

message BMessage {
    bytes x = 1;
    bytes D = 2;
    bytes E = 3;
}